--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,8 +11,6 @@ monitor=DP-3,1920x1080@180,auto,auto
 ###################
 $terminal = kitty
 $fileManager = yazi
-$menu = rofi
-$browser = google-chrome
 $taskManager = btop
 
 
@@ -39,15 +37,12 @@ $OCR4Linux_ENG = ~/Downloads/OCR4Linux/OCR4Linux.sh --lang eng
 ### Windows Rules ###
 #############################
 
-#windowrule = opacity 1 override 1 override 1.0 override, class:Code # For Overriding Opacity in VsCode
-#windowrule = opacity 1 override 1 override 1.0 override, class:zen # For Overriding Opacity in Zen
-
 windowrulev2 = workspace 1, class:zen
 windowrulev2 = workspace 1, class:google-chrome
 windowrulev2 = workspace 1, class:firefox-bin
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 2, class:kitty
-windowrulev2 = workspace 2, class:^(kitty)$
+windowrulev2 = workspace 2, class:^(kitty)
 
 windowrulev2 = float, class:^(clipse)$
 windowrulev2 = size 1000 600, class:^(clipse)$
@@ -59,15 +54,13 @@ windowrulev2 = workspace 3, class:discord
 windowrulev2 = workspace 4, class:Docker Desktop
 windowrulev2 = workspace 4, class:GitKraken
 
-#windowrule = opacity 1.0 override ,class:zen
-#layerrule = animation fade, hyprpaper
+exec-once = [workspace 1; float; move 100 100 ; size 850 400; no_close_for 999999] kitty --class fastfetch_term -o font_size=10 -e sh -c "fastfetch; sleep infinity"
+windowrulev2 = float, class:^(fastfetch_term)$
+windowrulev2 = nofocus, class:^(fastfetch_term)$
+windowrulev2 = nofollowmouse, class:^(fastfetch_term)$
+windowrulev2 = workspace 1 silent, class:^(fastfetch_term)$
 
-windowrulev2 = float, class:^(fastfetch-bg)$
-windowrulev2 = size 600 400, class:^(fastfetch-bg)$
-windowrulev2 = move 50 100, class:^(fastfetch-bg)$
-windowrulev2 = pin, class:^(fastfetch-bg)$
-windowrulev2 = nofocus, class:^(fastfetch-bg)$
-exec-once = kitty --class fastfetch-bg -e sh -c "fastfetch; read"
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -193,6 +186,7 @@ input {
     kb_options = caps:none
     kb_options = caps:super
     kb_rules =
+    numlock_by_default = true
 
     follow_mouse = 1
 
@@ -234,27 +228,22 @@ binds {
 }
 
 $mainMod = SUPER
+
+bind = $mainMod, B, exec, $terminal $taskManager
+
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, W, killactive
 bind = $mainMod, V, togglefloating
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, G, fullscreen, 0
-bind = $mainMod, N, exec, [float; size 800 400] ~/.config/nvim-wl-anywhere/nvim-wl-anywhere.sh
 
-bind = $mainMod SHIFT, E, exec, $OCR4Linux_ENG # OCR4Linux with interactive selection
-
-#Yazi File Manager
 bind = $mainMod, E, exec, $terminal $fileManager
-#Rofi Powermenu
 bind = $mainMod, P, exec, ~/.config/rofi/powermenu/powermenu.sh
-#Rofi Launcher
 bind = $mainMod, Space, exec, ~/.config/rofi/launcher/launcher.sh
 
 #Grim & Slurp  for Screenshot
 bind = $mainMod_Shift, S, exec, slurp | grim -g - /tmp/photo && wl-copy < /tmp/photo && notify-send -w 'Screenshot' 'Screenshot Copied to Clipboard' -i /tmp/photo
 bind = , PRINT, exec, grimblast copysave area
-# bind = Alt+Shift, S, exec, grim -g "$(slurp)" $HOME/Pictures/Screenshot/$(date +'%m-%d-%H-%M-%S').png && notify-send 'Screenshot Saved' -i $HOME/Pictures/Screenshot/$(date +'%m-%d-%H-%M-%S').png
-bind = Alt+Shift, S, exec, ~/work/main/dotsh/omarchy/screenshot
 
 bind = Alt+Shift, W, exec, pkill -9 waybar ||  waybar &
 
