--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,9 +23,9 @@ exec = gsettings set org.gnome.desktop.interface cursor-size 40
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = waybar
-exec-once = swww-daemon
 exec-once = hypridle
-exec-once = dunst
+exec-once = swaync
+exec-once = hyprpaper
 
 $OCR4Linux = ~/Downloads/OCR4Linux/OCR4Linux.sh
 $OCR4Linux_ENG = ~/Downloads/OCR4Linux/OCR4Linux.sh --lang eng
