--- a/waybar/config
+++ b/waybar/config
@@ -3,7 +3,7 @@
     "position": "top",
     "modules-left": ["hyprland/workspaces", "cpu", "memory"],
     "modules-center": ["custom/music"],
-    "modules-right": ["pulseaudio",  "clock", "tray", "custom/lock", "custom/power"],
+    "modules-right": ["wlr/taskbar", "pulseaudio",  "clock", "tray", "custom/notification", "custom/power"],
 
     "hyprland/workspaces": {
          "disable-scroll": true,
@@ -72,5 +72,38 @@
         "tooltip": false,
         "on-click": "wlogout &",
         "format": ""
-    }
+    },
+
+    "wlr/taskbar": {
+        "format":" {icon} ",
+        "icon-size": "30",
+        "tooltip-format": "{title}",
+        "on-click": "activate",
+        "on-click-middle": "close",
+        "ignore-list": [
+            "kitty",
+            "sh"
+        ]
+    },
+
+    "custom/notification": {
+    "tooltip": false,
+    "format": "{icon}",
+    "format-icons": {
+      "notification": "<span foreground='red'><sup></sup></span>",
+      "none": "",
+      "dnd-notification": "<span foreground='red'><sup></sup></span>",
+      "dnd-none": "",
+      "inhibited-notification": "<span foreground='red'><sup></sup></span>",
+      "inhibited-none": "",
+      "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+      "dnd-inhibited-none": ""
+    },
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "swaync-client -t -sw",
+    "on-click-right": "swaync-client -d -sw",
+    "escape": true
+}
 }
