--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,10 +27,11 @@ exec-once = hypridle
 exec-once = swaync
 exec-once = hyprpaper
 
+exec-once = [workspace 3] steam
+exec-once = [workspace 3] discord
+
 $OCR4Linux = ~/Downloads/OCR4Linux/OCR4Linux.sh
 $OCR4Linux_ENG = ~/Downloads/OCR4Linux/OCR4Linux.sh --lang eng
-
-# bind = $mainMod SHIFT, T, exec, $OCR4Linux
 
 
 #############################
@@ -49,14 +50,11 @@ windowrulev2 = size 1000 600, class:^(clipse)$
 windowrulev2 = center, class:^(clipse)$
 windowrulev2 = workspace 4 silent, class:hyprland-dialog
 windowrulev2 = workspace 4 silent, class:mpv
-windowrulev2 = workspace 3, class:Code
+windowrulev2 = workspace 3, class:steam
 windowrulev2 = workspace 3, class:discord
-windowrulev2 = workspace 4, class:Docker Desktop
-windowrulev2 = workspace 4, class:GitKraken
 
-exec-once = [workspace 1; float; move 100 100 ; size 850 400; no_close_for 999999] kitty --class fastfetch_term -o font_size=10 -e sh -c "fastfetch; sleep infinity"
-windowrulev2 = float, class:^(fastfetch_term)$
-windowrulev2 = nofocus, class:^(fastfetch_term)$
+exec-once = [workspace 1; float; move 100 100 ; size 850 400] kitty --class fastfetch_term -o font_size=10 -e sh -c "fastfetch; sleep infinity"
+# windowrulev2 = nofocus, class:^(fastfetch_term)$
 windowrulev2 = nofollowmouse, class:^(fastfetch_term)$
 windowrulev2 = workspace 1 silent, class:^(fastfetch_term)$
 
@@ -276,10 +274,10 @@ bind = Alt Shift, Tab, cyclenext, prev
 
 bind = $mainMod, A, exec,bash  ~/.config/rofi/wifi/wifi.sh
 
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
 
 # My recommendation
 bind = $mainMod, 0, workspace, 1
@@ -313,8 +311,8 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # bind = $mainMod SHIFT, E, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_down, workspace, e-1
+bind = $mainMod, mouse_up, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
