--- a/waybar/config
+++ b/waybar/config
@@ -70,7 +70,7 @@
 
     "custom/power": {
         "tooltip": false,
-        "on-click": "wlogout &",
+        "on-click": ". ~/.config/rofi/powermenu/powermenu.sh",
         "format": ""
     },
 
