--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,25 +38,25 @@ $OCR4Linux_ENG = ~/Downloads/OCR4Linux/OCR4Linux.sh --lang eng
 ### Windows Rules ###
 #############################
 
-windowrulev2 = workspace 1, class:zen
-windowrulev2 = workspace 1, class:google-chrome
-windowrulev2 = workspace 1, class:firefox-bin
-windowrulev2 = workspace 3, class:obsidian
-windowrulev2 = workspace 2, class:kitty
-windowrulev2 = workspace 2, class:^(kitty)
+#windowrulev2 = workspace 1, class:zen
+#windowrulev2 = workspace 1, class:google-chrome
+#windowrulev2 = workspace 1, class:firefox-bin
+#windowrulev2 = workspace 3, class:obsidian
+#windowrulev2 = workspace 2, class:kitty
+#windowrulev2 = workspace 2, class:^(kitty)
 
-windowrulev2 = float, class:^(clipse)$
-windowrulev2 = size 1000 600, class:^(clipse)$
-windowrulev2 = center, class:^(clipse)$
-windowrulev2 = workspace 4 silent, class:hyprland-dialog
-windowrulev2 = workspace 4 silent, class:mpv
-windowrulev2 = workspace 3, class:steam
-windowrulev2 = workspace 3, class:discord
+#windowrulev2 = float, class:^(clipse)$
+#windowrulev2 = size 1000 600, class:^(clipse)$
+#windowrulev2 = center, class:^(clipse)$
+#windowrulev2 = workspace 4 silent, class:hyprland-dialog
+#windowrulev2 = workspace 4 silent, class:mpv
+#windowrulev2 = workspace 3, class:steam
+#windowrulev2 = workspace 3, class:discord
 
-exec-once = [workspace 1; float; move 100 100 ; size 850 400] kitty --class fastfetch_term -o font_size=10 -e sh -c "fastfetch; sleep infinity"
+#exec-once = [workspace 1; float; move 100 100 ; size 850 400] kitty --class fastfetch_term -o font_size=10 -e sh -c "fastfetch; sleep infinity"
 # windowrulev2 = nofocus, class:^(fastfetch_term)$
-windowrulev2 = nofollowmouse, class:^(fastfetch_term)$
-windowrulev2 = workspace 1 silent, class:^(fastfetch_term)$
+#windowrulev2 = nofollowmouse, class:^(fastfetch_term)$
+#windowrulev2 = workspace 1 silent, class:^(fastfetch_term)$
 
 
 #############################
@@ -234,6 +234,7 @@ bind = $mainMod, W, killactive
 bind = $mainMod, V, togglefloating
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, G, fullscreen, 0
+bind = $mainMod, O, exec, ~/.config/hypr/scripts/toggle_waybar.sh
 
 bind = $mainMod, E, exec, $terminal $fileManager
 bind = $mainMod, P, exec, ~/.config/rofi/powermenu/powermenu.sh
